fix: fix header and hero section overflow UI

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,7 +26,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 17px 78px; 
+  padding: 0px 78px; 
   clip-path: polygon(0 0, 100% 0, calc(100% - 2.4rem) 100%, 0 100%);
 }
 
@@ -75,7 +75,7 @@
 
 @media (max-width: 1024px) {
   .header-logo-container {
-    padding: 17px 78px;
+    padding: 0px 78px;
   }
 
   .header-buttons {
@@ -91,7 +91,7 @@
   }
 
   .header-logo-container {
-    padding: 16px 40px;
+    padding: 0px 0px;
     width: 100%;
   }
 
@@ -101,7 +101,7 @@
 
   .header-buttons {
     gap: 20px;
-    padding-right: 20px;
+    padding-right: 0px;
     margin-bottom: 20px;
   }
 
