--- a/src/sections/Features/Features.css
+++ b/src/sections/Features/Features.css
@@ -8,7 +8,7 @@
   padding: 0 75px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 30px;
   max-width: 1440px;
   width: 100%;
 }
@@ -20,7 +20,7 @@
   }
   .features-container {
     padding: 0 30px;
-    gap: 30px;
+    gap: 10px;
   }
 }
 
